fix(settings): flickering when corrupted wallpapers

--- a/src/ui/react/settings/modules/resources/infra.module.css
+++ b/src/ui/react/settings/modules/resources/infra.module.css
@@ -119,7 +119,8 @@
   }
 
   .warning,
-  .danger {
+  .danger,
+  .corrupted {
     position: absolute;
     bottom: 8px;
     right: 8px;
